fix image preview overflowing

--- a/src/card-builder/card-builder.css
+++ b/src/card-builder/card-builder.css
@@ -211,8 +211,8 @@ audio {
 }
 
 #image-preview-container #image-preview {
-    max-height: 100%;
-    max-width: 100%;
+    max-width: 125px;
+    max-height: 125px;
     border-radius: 8px;
     place-self: center;
 }
